--- a/vercel.json
+++ b/vercel.json
@@ -1,4 +1,6 @@
 {
+  "buildCommand": "echo 'No build needed for static site'",
+  "outputDirectory": ".",
   "functions": {
     "api/proxy.js": {
       "maxDuration": 30
